MCS get bucket info api (#375)
