# mcs/swagger.yml
@@ -58,6 +58,25 @@ paths:
       tags:
         - UserAPI
   /api/v1/buckets/{name}:
+    get:
+      summary: Bucket Info
+      operationId: BucketInfo
+      parameters:
+        - name: name
+          in: path
+          required: true
+          type: string
+      responses:
+        200:
+          description: A successful response.
+          schema:
+            $ref: "#/definitions/bucket"
+        default:
+          description: Generic error response.
+          schema:
+            $ref: "#/definitions/error"
+      tags:
+        - UserAPI
     delete:
       summary: Delete Bucket
       operationId: DeleteBucket
